--- a/src/components/games/GameDetails.css
+++ b/src/components/games/GameDetails.css
@@ -6,8 +6,38 @@
 }
 
 .board-paper {
-  
+  display: flex;
+  flex-flow: column;
+  align-items: center;
   margin: auto;
   padding: 20px;
   width: 60%;
+  background-color: black !important;
 }
+
+.guessBtn {
+  display:inline-block;
+  padding:0.35em 1.2em;
+  border:0.1em solid #FFFFFF;
+  margin:0 0.3em 0.3em 0;
+  border-radius:0.12em;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  color:#FFFFFF;
+  text-align:center;
+  transition: all 0.2s;
+  }
+  
+  guessBtn:hover{
+    color:#000000;
+    background-color:#FFFFFF;
+  }
+  @media all and (max-width:30em){
+    .guessBtn {
+    display:block;
+    margin:0.4em auto;
+  }
+  }
+
