--- a/src/components/games/Board.css
+++ b/src/components/games/Board.css
@@ -137,3 +137,12 @@
   border-radius: 50%;
   border: 1px solid black;
 }
+
+@media screen 
+  and (device-width: 360px) 
+  and (device-height: 640px) 
+  and (-webkit-device-pixel-ratio: 4) {
+
+    background-color: #5245e0;
+
+}
