--- a/src/components/games/GameDetails.css
+++ b/src/components/games/GameDetails.css
@@ -60,6 +60,7 @@ a.guessBtn{
   @media only screen and (max-width: 1051px) {
     .textBox {
       width: 150px;
+      height: 400px;
     }
 }
 
@@ -94,3 +95,12 @@ a.guessBtn{
   }
 }
 
+.resultMsg {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  color: #F90000;
+  font-size: 200%;
+  
+}
